# tauri-plugin-p256-signer

./: Cargo.toml  README.md  build.rs  bun.lockb  package.json
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/app/tauri/p256/: P256SignerPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
ios/Sources/P256SignerPlugin/: Base64URL.swift  Bridge.swift  Models.swift  P256SignerPlugin.swift  P256SignerPluginCore.swift  Plugin.swift  PluginShim.swift  Presentation.swift
ios/Tests/P256SignerPluginTests/: P256SignerPluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: create_credential.toml  get_credential.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
