[package]
name = "tauri-plugin-p256-signer"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-p256-signer"

[dependencies]
tauri = "2.5.0"
serde = "1.0"
thiserror = "2"
tauri-cli = "2.7.1"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
